--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 
 <!-- cordova -->
 <script src="lib/ionic/js/ionic.bundle.js"></script>
-<script src="lib/ngCordova/dist/ng-cordova.js"></script>
+<script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
 <script src="lib/angular-spotify/dist/angular-spotify.min.js"></script>
 <script src="cordova.js"></script>
