adding new icon/splash

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Festival Arts</title>
+    <title>Festival De Les Arts</title>
     <!-- compiled css output -->
     <link href="res/main.min.css" rel="stylesheet">
 </head>
@@ -18,6 +18,8 @@
 <script src="lib/ionic/js/ionic.bundle.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
+<script src="lib/ngstorage/ngStorage.min.js"></script>
+<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 <script src="lib/angular-spotify/dist/angular-spotify.min.js"></script>
 <script src="cordova.js"></script>
 
