--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Festival De Les Arts</title>
+    <title>Les Arts</title>
     <!-- compiled css output -->
     <link href="res/main.min.css" rel="stylesheet">
     <script type="text/javascript" charset="utf-8" src="lib/PushNotification/PushNotification.js"></script>
