--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,9 @@
     <title>Les Arts</title>
     <!-- compiled css output -->
     <link href="res/main.min.css" rel="stylesheet">
-    <script type="text/javascript" charset="utf-8" src="lib/PushNotification/PushNotification.js"></script>
 </head>
 
-<body ng-app="festival">
+<body ng-app="lesarts">
 <ion-nav-view></ion-nav-view>
 
 <!-- ionic/angularjs js -->
@@ -17,7 +16,6 @@
 
 <!-- cordova -->
 <script src="lib/ionic/js/ionic.bundle.js"></script>
-<script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 <script src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
 <script src="lib/ngstorage/ngStorage.min.js"></script>
 <script src="lib/ng-twitter-api/dist/ng-twitter-api.min.js"></script>
@@ -27,9 +25,10 @@
 <script src="lib/angular-spotify/dist/angular-spotify.min.js"></script>
 <script src="lib/angular-i18n/angular-locale_es-es.js"></script>
 <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU&sensor=true"></script>
+<script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="cordova.js"></script>
 <!-- compiled js output -->
 <script src="res/main.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU&sensor=true"></script>
 </body>
 </html>
