--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 <script src="lib/angular-spotify/dist/angular-spotify.min.js"></script>
 <script src="lib/angular-i18n/angular-locale_es-es.js"></script>
 <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU&sensor=true"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="cordova.js"></script>
 <!-- compiled js output -->
