--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,9 @@
 <script src="lib/angular-spotify/dist/angular-spotify.min.js"></script>
 <script src="lib/angular-i18n/angular-locale_es-es.js"></script>
 <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+<script src="lib/moment/moment.js"></script>
+<script src="lib/moment/locale/es.js"></script>
+<script src="lib/angular-moment/angular-moment.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU&sensor=true"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="cordova.js"></script>
