add festival as ios

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 <script src="lib/moment/moment.js"></script>
 <script src="lib/moment/locale/es.js"></script>
 <script src="lib/angular-moment/angular-moment.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU&sensor=true"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyByLMZlJDq56cY5vJAWjubWdMGj2Mke2NU"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="cordova.js"></script>
 <!-- compiled js output -->
