adding new push services

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,11 @@
 <body ng-app="arenalsound">
 <ion-nav-view></ion-nav-view>
 
+<script src="lib/bluebird.min.js"></script>
+
 <!-- ionic/angularjs js -->
 <script src="lib/ionic/js/ionic.bundle.js"></script>
+<script src="lib/ionic.cloud.min.js"></script>
 
 <!-- cordova -->
 <script src="lib/ionic/js/ionic.bundle.js"></script>
